Adjusted log levels